<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">迅雷播放器</string>

    <string name="main_title">我的下载</string>
    <string name="main_title_1">迅雷播放器</string>

    <string name="control_restart_tips">使用遥控器【上键】从头开始播放&#160;&#160;&#160;&#160;</string>
    <string name="tips_video_coming_end">播放器即将从头开始播放</string>

    <string name="bind_web_tv_title">还没有远程下载过,如何下载?</string>
    <string name="bind_web_way">方式一:使用电脑下载</string>
    <string name="bind_web_step_one">第一步 添加设备</string>
    <string name="bind_web_step_two">选择“高清播放机”，输入设备号: 正在获取...</string>

    <string name="bind_app_way">方式二:安卓手机绑定</string>
    <string name="bind_app_step_one">1.安卓手机上打开迅雷影音APP，进入“我的”</string>
    <string name="bind_app_step_two">2.点击"下载-远程下载"，点击"添加新设备"</string>
    <string name="bind_app_step_three">3.扫描左侧二维码手动输入设备号，完成绑定</string>
    <string name="bind_app_device_num">设备号: 正在获取...</string>
    <string name="bind_app_download_app">还没有安装迅雷影音？扫描右侧二维码马上下载</string>
    <string name="bind_bar_menu_tv">菜单键更多操作</string>

    <string name="bind_app_thunder">用以下两种方式绑定迅雷帐号，开启远程下载功能</string>

    <string name="tv_xunlei_account_notbind">帐号未绑定</string>
    <string name="tv_xunlei_account_bind">%1$s的下载</string>

    <string name="tips_subtitle_local_loading">本地字幕加载中</string>
    <string name="tips_subtitle_online_loading">网络字幕加载中</string>
    <string name="tips_play_error">播放遇到了问题，请确认视频文件格式是否正确或已被移除</string>

    <string name="remote_download_tv">还没有用过远程下载,如何下载</string>
    <string name="remote_download_app">方式一:使用迅雷影音下载</string>
    <string name="remote_download_app_step1">选择想下载的视频</string>
    <string name="remote_download_app_step2">选择下载到远程设备</string>
    <string name="remote_download_app_step22">仅支持下载到U盘、移动硬盘等存储设备</string>
    <string name="remote_download_app_step3">下载成功后就会显示在这里</string>

    <string name="remote_download_web">方式二:使用浏览器下载</string>
    <string name="remote_download_web_step2">粘贴下载地址，选择绑定好的设备，开始下载</string>
    <string name="remote_download_web_step22">仅支持下载到U盘、移动硬盘等存储设备</string>
    <string name="remote_download_web_step3">下载成功后就会显示在这里</string>

    <string name="menu_bind">绑定设备</string>
    <string name="menu_unbind">解除绑定</string>

    <string name="tips_not_found_title">找不到视频文件</string>
    <string name="tips_not_found_usb_subtitle">该影片在U盘中，插入U盘可继续观看</string>
    <string name="tips_not_found_hdd_subtitle">该影片在移动硬盘中，插入移动硬盘可继续观看</string>
    <string name="tips_not_found_error_subtitle">请检查设备是否正常工作或视频源是否存在后重试</string>
    <string name="tips_format_unsupport_title">视频格式支持</string>
    <string name="tips_format_unsupport_subtitle">非常抱歉，我们暂不支持该视频格式</string>


    <!--远程页面-->
    <string name="remote_bind_tv">绑定迅雷帐号，享受随时下载的乐趣!</string>
    <string name="remote_bind_btn">立即绑定</string>

    <string name="remote_bind_tv_2">空空如也,您还没下载过视频或没插入移动硬盘~</string>
    <string name="remote_bind_nobind">请使用迅雷路由器www.peiluyou.com，绑定迅雷帐号~</string>

    <string name="remote_tips_tv">恭喜%1$s，您的迅雷帐号绑定成功!</string>
    <string name="remote_tips_btn">知道了</string>

    <string name="remote_tips_nosupport">暂时仅支持以下盒子：小米盒子、创维i71s、海美迪盒子\n
    其他盒子我们在紧锣密鼓的适配中~别忘了升级哦~</string>


    <string name="remote_down_tv">空空如也，您还没有下载过视频~</string>
    <string name="remote_nodisk_tv">您还没有插入U盘或移动硬盘，暂时无法下载哦~</string>
    <string name="remote_nodisk_tv2">为了保证良好的下载速度体验和观影质量，推荐您使用NTFS格式的移动硬盘~</string>
    <string name="remote_down_left">马上下载视频</string>
    <string name="remote_down_right">下载失败了</string>

    <string name="remote_down_fail_firstline">当前盒子暂不支持NTFS格式 U盘/移动硬盘下载</string>
    <string name="remote_down_fail_secondline">您可以:换个U盘/移动硬盘或使用电脑格式化成FAT32格式后，再下载</string>

    <!--web绑定-->
    <string name="remote_web_bind_step_one_first">1 百度搜索“迅雷远程下载”</string>
    <string name="remote_web_bind_step_one_second_1">进入</string>
    <string name="remote_web_bind_step_one_second_2">yuancheng.xunlei.com</string>

    <string name="remote_web_bind_step_two_first">2 选择“高清播放器”</string>
    <string name="remote_web_bind_step_two_second">使用过远程下载用户，在下\n载器处选择添加</string>

    <string name="remote_web_bind_step_three_first">3 输入激活码</string>
    <string name="remote_web_bind_step_three_second"></string>
    <string name="remote_code_getting">加载中...</string>

    <!--mobile绑定-->
    <string name="remote_mobile_bind_step_one_first">1 手机打开“迅雷电视助手”，并登录</string>
    <string name="remote_mobile_bind_step_one_second">没有安装可扫描下面二维码下载</string>

    <string name="remote_mobile_bind_step_two_first">2 进入“大屏看片”-“添加远程设备”</string>
    <string name="remote_mobile_bind_step_two_second"></string>

    <string name="remote_mobile_bind_step_three_first">3 直接绑定相同wifi下的设备</string>
    <string name="remote_mobile_bind_step_three_second"></string>

    <string name="remote_mobile_bind_step_four_first">4 手机扫描下面二维码绑定</string>
    <string name="remote_mobile_bind_step_four_second">或输入机器码</string>

    <!--mobile绑定 以前的-->
    <string name="remote_mobile_bind_step_one_first_pre">1 手机打开“迅雷影音”应用</string>
    <string name="remote_mobile_bind_step_one_second_pre">没有安装、可扫描下面二维码下载</string>

    <string name="remote_mobile_bind_step_two_first_pre">2 进入“我的”—“下载”</string>
    <string name="remote_mobile_bind_step_two_second_pre"></string>

    <string name="remote_mobile_bind_step_three_first_pre">3 选择“远程下载”—“添加新设备”</string>
    <string name="remote_mobile_bind_step_three_second_pre"></string>

    <string name="remote_mobile_bind_step_four_first_pre">4 选择“二维码添加”</string>
    <string name="remote_mobile_bind_step_four_second_pre">或输入激活码</string>


    <!--web引导下载-->
    <string name="remote_web_down_step_one_first">1 电脑百度一下“迅雷远程下载”</string>
    <string name="remote_web_down_step_one_second_1">进入</string>
    <string name="remote_web_down_step_one_second_2">yuancheng.xunlei.com</string>


    <string name="remote_web_down_step_two_first">2 点击“新建”后，粘贴下载链接</string>
    <string name="remote_web_down_step_two_second">仅支持下载到U盘、移动硬盘等设备</string>

    <string name="remote_web_down_step_three_first">3 下载成功后、即可通过电视观看</string>
    <string name="remote_web_down_step_three_second"></string>

    <!--mobile引导下载-->
    <string name="remote_mobile_down_step_one_first">1 手机打开“迅雷电视助手”,并登录</string>
    <string name="remote_mobile_down_step_one_second">没有安装可扫描下面二维码下载</string>

    <string name="remote_mobile_down_step_two_first">2 进入"大屏看片"-找到远程设备</string>
    <string name="remote_mobile_down_step_two_second">并点击</string>

    <string name="remote_mobile_down_step_three_first">3 点击右上角“+”选择下载方式</string>
    <string name="remote_mobile_down_step_three_second"></string>

    <string name="remote_mobile_down_step_four_first">4 从离线空间选择要下载的视频,</string>
    <string name="remote_mobile_down_step_four_second">点击“远程下载”</string>

    <string name="remote_mobile_down_step_five_first">5 或输入下载链接，并创建任务</string>
    <string name="remote_mobile_down_step_five_second">仅支持下载到U盘、移动硬盘等设备</string>

    <!--mobile引导下载 以前的-->
    <string name="remote_mobile_down_step_one_first_pre">1 手机打开“迅雷影音”应用</string>
    <string name="remote_mobile_down_step_one_second_pre">没有安装、可扫描下面二维码下载</string>

    <string name="remote_mobile_down_step_two_first_pre">2 登录迅雷帐号</string>
    <string name="remote_mobile_down_step_two_second_pre"></string>

    <string name="remote_mobile_down_step_three_first_pre">3 选择视频下载</string>
    <string name="remote_mobile_down_step_three_second_pre"></string>

    <string name="remote_mobile_down_step_four_first_pre">4 修改“下载到”位置</string>
    <string name="remote_mobile_down_step_four_second_pre">仅支持下载到U盘、移动硬盘等设备</string>


    <string name="remote_list_btn_bind">绑定迅雷帐号，继续下载的乐趣</string>
    <string name="remote_downloading_tv">有%1$d个任务正在下载...</string>

    <string name="remote_menu_down_failed">如何下载视频</string>

    <string name="remote_title_mydownload">我的下载</string>
    <string name="remote_title_webbind">浏览器绑定</string>
    <string name="remote_title_mobilebind">手机绑定</string>
    <string name="remote_title_guidedownload">马上下载视频</string>

    <string name="remote_bar_left_right_tv">"左""右"键切换内容</string>
    <string name="remote_bar_unbind_tv">未绑定迅雷帐号</string>
    <string name="remote_bar_menu_tv">"菜单"键更多操作</string>

    <string name="remote_down_method_web">方式一 通过电脑下载</string>
    <string name="remote_down_method_mobile">方式二 通过手机下载</string>

    <string name="remote_dialog_title_webbind">浏览器下载</string>
    <string name="remote_dialog_title_mobilebind">手机下载</string>

    <string name="remote_tips_unbind_network_error">网络不稳定哦，请检查网络连接是否正常~</string>

    <!--远程多入口界面-->
    <string name="remote_router">迅雷路由器</string>
    <string name="remote_box">电视盒子</string>
    <string name="remote_how_download">如何远程下载</string>
    <string name="remote_not_perfect_support">暂时没有完美适配</string>

    <!--路由器的下载引导界面-->
    <!--web引导下载-->
    <string name="remote_router_web_down_step_one_first">1 用浏览器打开“peiluyou.com”</string>
    <string name="remote_router_web_down_step_one_second">pei(配)lu(路)you(由),简单好记哦</string>


    <string name="remote_router_web_down_step_two_first">2 点击“下载管理”</string>
    <string name="remote_router_web_down_step_two_second">就进入了远程下载页面哦</string>

    <string name="remote_router_web_down_step_three_first">3 点击"新建"后粘贴下载链接</string>
    <string name="remote_router_web_down_step_three_second">仅支持下载到U盘、移动硬盘等设备</string>

    <string name="remote_router_web_down_step_fourth_first">4 下载成功后,即可通过电视观看</string>


    <!--mobile引导下载-->
    <string name="remote_router_mobile_down_step_one_first">1 手机打开“迅雷路由”应用</string>
    <string name="remote_router_mobile_down_step_one_second">没有安装、可扫描下面二维码下载</string>

    <string name="remote_router_mobile_down_step_two_first">2 登录迅雷帐号</string>
    <string name="remote_router_mobile_down_step_two_second"></string>

    <string name="remote_router_mobile_down_step_three_first">3 选择视频下载</string>
    <string name="remote_router_mobile_down_step_three_second"></string>

    <string name="remote_router_mobile_down_step_four_first">4 修改“下载到”位置</string>
    <string name="remote_router_mobile_down_step_four_second">仅支持下载到U盘、移动硬盘等设备</string>

    <string name="local_file_list_empty">这个文件夹里的视频和安装包都可以帮你找到</string>
    <string name="smb_file_list_empty">路由器硬盘上的视频/安装包都会为你找到</string>

    <string name="remote_usrname_null">未知帐号</string>

    <!-- 历史记录 -->
    <string name="history_menu_title_main">"菜单"键编辑</string>
    <string name="history_menu_title_back">"返回"键退出编辑</string>

    <!--解绑提示框-->
    <string name="remote_alert_unbind_title">确定要取消绑定帐号%1$s?</string>
    <string name="remote_alert_unbind_des">(解除后将无法继续下载)</string>
    <string name="remote_alert_confirm">确定</string>
    <string name="remote_alert_cancel">容我再想想</string>

    <!--支持设备提示框-->
    <string name="remote_entry_notify_des">暂时仅支持以下盒子：小米盒子、创维i71s、TCL7v盒子、海美迪盒子</string>
    <string name="remote_entry_alert_confirm">不再提示了</string>
    <string name="remote_entry_alert_cancel">知道了</string>

    <!--远程下载帮助-->
    <string name="remote_usrhelp_title">远程下载帮助</string>
    <string name="remote_local_loading">远程下载启动中...\n点击查看帮助</string>

</resources>
