<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:textSize="26sp"
        android:textColor="#020e1d"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/guide_tv_bg"
        android:text="@string/remote_download_app"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="36dp"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="9dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/guide_app_down11"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_gravity="center_horizontal"
                android:textSize="24sp"
                android:textColor="#fffffd"
                android:text="@string/remote_download_app_step1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="9dp"
            android:orientation="vertical">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/guide_app_down12"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_gravity="center_horizontal"
                android:textSize="24sp"
                android:textColor="#fffffd"
                android:text="@string/remote_download_app_step2"/>

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="13.5dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:textSize="24sp"
                android:textColor="#fffffd"
                android:text="@string/remote_download_app_step22"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/guide_web_down13"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_gravity="center_horizontal"
                android:textSize="24sp"
                android:textColor="#fffffd"
                android:text="@string/remote_download_app_step3"/>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>