<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/remote_tips_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="50dp"
        android:paddingBottom="50dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/title_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:src="@drawable/reomte_noperfect_support_ic"
            />

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="26sp"
            android:textColor="#96aab4"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/remote_entry_notify_des"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/submit"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="-10dp"
                android:layout_gravity="center_horizontal"
                android:textSize="26sp"
                android:gravity="top|center_horizontal"
                android:text="@string/remote_entry_alert_confirm"
                android:textColor="@android:color/white"
                android:src="@android:color/holo_red_dark"
                android:background="@drawable/remote_btn_bind_bg">

                <requestFocus/>
            </Button>

            <Button
                android:id="@+id/cancel"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_gravity="center_horizontal"
                android:textSize="26sp"
                android:gravity="top|center_horizontal"
                android:text="@string/remote_entry_alert_cancel"
                android:textColor="@android:color/white"
                android:src="@android:color/holo_red_dark"
                android:background="@drawable/remote_alert_unbind_cancel_bg">
            </Button>


        </LinearLayout>


    </LinearLayout>


</RelativeLayout>
