<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/remote_tips_bg">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="@dimen/remote_unbind_alert_margintop"
            android:paddingBottom="0px"
            android:orientation="vertical">

        <TextView
                android:id="@+id/unbind_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/remote_unbind_alert_textsize_1"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                />

        <TextView
                android:id="@+id/subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/remote_unbind_alert_textsize_2"
                android:textColor="#96aab4"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/remote_unbind_alert_tv_margintop"
                android:text="@string/remote_alert_unbind_des"
                />

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/remote_unbind_btn_margintop"
                android:orientation="horizontal">
            <RelativeLayout
                    android:layout_width="@dimen/remote_unbind_btn_width"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/remote_unbind_btn_margin">
                <Button
                        android:id="@+id/submit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:background="@drawable/remote_btn_bind_bg">

                    <requestFocus/>
                </Button>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/remote_unbind_alert_textsize_2"
                        android:text="@string/remote_alert_confirm"
                        android:textColor="@android:color/white"
                        android:layout_centerInParent="true"
                        />
            </RelativeLayout>

            <RelativeLayout
                    android:layout_width="@dimen/remote_unbind_btn_width"
                    android:layout_height="wrap_content">
                <Button
                        android:id="@+id/cancel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:background="@drawable/remote_alert_unbind_cancel_bg">
                </Button>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/remote_unbind_alert_textsize_2"
                        android:text="@string/remote_alert_cancel"
                        android:textColor="@android:color/white"
                        android:layout_centerInParent="true"
                        />
            </RelativeLayout>

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>
