<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="86dp">

        <TextView
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:textColor="#020e1d"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/bind_web_way"
            android:background="@drawable/guide_tv_bg"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_gravity="center_horizontal">

            <RelativeLayout
                android:id="@+id/ll_step_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="100dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/step_one_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/guide_web_bind_1"/>

                <RelativeLayout
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/step_one_iv"
                    android:layout_marginTop="-20dp"
                    android:layout_centerHorizontal="true"
                    >

                    <TextView
                        android:id="@+id/step_number_one_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:textSize="42sp"
                        android:textColor="#f8f6f4"
                        android:text="1"
                        />

                    <TextView
                        android:id="@+id/step_one_tv"
                        android:layout_toRightOf="@id/step_number_one_tv"
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:textSize="28sp"
                        android:textColor="#f8f6f4"
                        android:text="@string/bind_web_step_one"/>


                </RelativeLayout>


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/ll_step_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/step_two_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/guide_web_bind_2"/>

                <RelativeLayout
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/step_two_iv"
                    android:layout_marginTop="-20dp"
                    android:layout_centerHorizontal="true"
                    >

                    <TextView
                        android:id="@+id/step_number_two_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:textSize="42sp"
                        android:textColor="#f8f6f4"
                        android:text="2"
                        />

                    <TextView
                        android:id="@+id/step_two_tv"
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_toRightOf="@id/step_number_two_tv"
                        android:textSize="28sp"
                        android:textColor="#f8f6f4"
                        android:text="@string/bind_web_step_two"/>
                </RelativeLayout>

            </RelativeLayout>


        </LinearLayout>
    </LinearLayout>


</RelativeLayout>